--- a/assets/templates/crypto-b/sass/blocks/trading.scss
+++ b/assets/templates/crypto-b/sass/blocks/trading.scss
@@ -189,12 +189,31 @@
     width: 95%;
   }
   
+  .coin__flex {
+    justify-content: space-around;
+  }
+  
+  .coin__c-1,
+  .coin__c-2,
+  .coin__c-3,
+  .coin__c-7,
+  .coin__c-8,
+  .coin__c-9 {
+    display: none;
+  }
+  
+  .coin__c-4,
+  .coin__c-5,
+  .coin__c-6 {
+    animation-name: coin;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-duration: 3s;
+  }
+  
   .trading__coin {
-    min-height: 100px;
-    margin: 0 auto;
+    min-height: 180px;
     margin-top: 40px;
-    // background: $w url("../img/coin.png") no-repeat center;
-    background-size: contain;
   }
   
   .trading__coin::before {
@@ -242,12 +261,34 @@
     width: 95%;
   }
   
+  .coin__flex {
+    justify-content: center;
+    padding-bottom: 40px;
+  }
+  
+  .coin__c-1,
+  .coin__c-2,
+  .coin__c-3,
+  .coin__c-4,
+  .coin__c-6,
+  .coin__c-7,
+  .coin__c-8,
+  .coin__c-9 {
+    display: none;
+  }
+  
+  .coin__c-4,
+  .coin__c-5,
+  .coin__c-6 {
+    animation-name: coin;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-duration: 3s;
+  }
+  
   .trading__coin {
     min-height: 100px;
-    margin: 0 auto;
     margin-top: 30px;
-    // background: $w url("../img/coin.png") no-repeat center;
-    background-size: contain;
   }
   
   .trading__coin::before {
@@ -284,10 +325,8 @@
   
   .trading__coin {
     min-height: 150px;
-    width: 100%;
     margin-top: 80px;
-    // background: $w url("../img/coin.png") no-repeat bottom;
-    background-size: contain;
+    padding-top: 20px;
   }
   
   .trading__coin::before {
