--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -74,20 +74,20 @@
   <section class="edge">
     <div class="container">
       <div class="edge__flex">
-        <div class="edge__box">
-          
+        <div class="edge__box  edge__box--e-1">
+          <p>Security of<br>founds</p>
         </div>
-        <div class="edge__box">
-          
+        <div class="edge__box  edge__box--e-2">
+          <p>24/7<br>Support</p>
         </div>
-        <div class="edge__box">
-          
+        <div class="edge__box  edge__box--e-3">
+          <p>High<br>Liqiudity</p>
         </div>
-        <div class="edge__box">
-          
+        <div class="edge__box  edge__box--e-4">
+          <p>No hidden<br>charges</p>
         </div>
-        <div class="edge__box">
-          
+        <div class="edge__box  edge__box--e-5">
+          <p>ROBOT-FRIENDLY<br>API</p>
         </div>
       </div>
     </div>
