--- a/assets/templates/crypto-b/sass/blocks/edge.scss
+++ b/assets/templates/crypto-b/sass/blocks/edge.scss
@@ -41,7 +41,15 @@
 // Media
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width : 320px) and (max-width : 480px) {
+  .edge__flex {
+    align-items: center;
+    flex-direction: column;
+  }
   
+  .edge__box {
+    margin-bottom: 30px;
+    font-size: 18px;
+  }
 }
 
 /* Smartphones (горизонтальная) ----------- */
@@ -49,7 +57,15 @@
 
 /* Smartphones (вертикальная) ----------- */
 @media only screen and (max-width: 320px) {
-
+  .edge__flex {
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .edge__box {
+    margin-bottom: 30px;
+    font-size: 18px;
+  }
 }
 
 /* iPads (вертикальная и горизонтальная) ----------- */
@@ -60,4 +76,10 @@
 /* iPads (вертикальная и горизонтальная) ----------- */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
+}
+
+@media only screen and (min-width: 1224px) {
+  .edge__flex {
+    justify-content: space-around;
+  }
 }
