--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -474,7 +474,7 @@ form p {
     font-size: 20px; } }
 
 .edge {
-  min-height: 245px; }
+  min-height: 230px; }
 
 .edge__flex {
   min-height: 200px;
@@ -484,13 +484,14 @@ form p {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-top: 40px; }
+  margin-top: 60px; }
 
 .edge__box {
   width: 190px;
-  padding-top: 120px;
+  margin-bottom: 40px;
+  padding-top: 100px;
   color: #0054a6;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
   text-align: center;
