--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -63,10 +63,10 @@
     <div class="container">
       <div class="trade__flex">
         <div class="trade__left-column">
-          Trade Cryptocurrencies<br>With BDSwiss
+          Walk on the path to success.<br>Buy, sell and trade cryptocurrencies.
         </div>
         <div class="trade__right-column">
-          BDSwiss offers investors the<br>opportunity to trade multiple crypto<br>currencies against the euro and the<br>US dollar on a 24/7 basis.
+          With cryptologic, you can easily change<br>any blockchain leading asset for any other<br>and it is 100% secured and fast.
         </div>
       </div>
     </div>
@@ -75,10 +75,10 @@
     <div class="container">
       <div class="edge__flex">
         <div class="edge__box  edge__box--e-1">
-          <p>Security of<br>founds</p>
+          <p>Secuirity of founds</p>
         </div>
         <div class="edge__box  edge__box--e-2">
-          <p>24/7<br>Support</p>
+          <p>24/7 support</p>
         </div>
         <div class="edge__box  edge__box--e-3">
           <p>High<br>Liqiudity</p>
@@ -87,7 +87,7 @@
           <p>No hidden<br>charges</p>
         </div>
         <div class="edge__box  edge__box--e-5">
-          <p>ROBOT-FRIENDLY<br>API</p>
+          <p>Robot-Friendly<br>API</p>
         </div>
       </div>
     </div>
@@ -97,32 +97,32 @@
       <div class="news__flex">
         <div class="news__left-column">
           <div class="news__left-column-first">
-            <b>NEWS</b>
-            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Nakamoto publishes his idea to create the first protocolSatoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocol Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocol</p>
+            <b>WHY CRYPTOLOGIC</b>
+            <p>Cryptologic offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use than paper money. Investing in digital currencies also ensures financial freedom, as no single entity or government policy controls it. These give users transparency and privacy in their transactions</p>
             <a href="#">Read More</a>
           </div>
           <div class="news__left-column-second">
-            <b>LIVE CHAT</b>
-            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer.</p>
+            <b>CRYPTOCURRENCY TRADING, A NEW TYPE OF INVECTMENT</b>
+            <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of cryptologic. Cryptologic web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots</p>
             <a href="#">Read More</a>
           </div>
         </div>
         <div class="news__middle-column">
           <div class="news__middle-column-first">
-            <b>CURRENT NEWS</b>
-            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Nakamoto publishes his idea to create the first</p>
+            <b>FRIENDLY INTERFACE</b>
+            <p>Cryptologic offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your workspace as it suits you from theme selection, compose layouts, notifications set up and lots more. With cryptologic trading is on a whole new level entirely. Sign up today</p>
             <a href="#">Read More</a>
           </div>
           <div class="news__middle-column-second">
-            <b>LIVE CHAT</b>
-            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Na Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Nakamoto publishes his idea to create the first kamoto publishes his idea to create the first</p>
+            <b>CRYPTOLOGIC</b>
+            <p>-The fastest, safest digital currency exchange on the planet</p>
             <a href="#">Read More</a>
           </div>
         </div>
         <div class="news__right-column">
           <div class="news__right-column-first">
-            <b>NEWS</b>
-            <p>Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolSatoshi Nakamoto publishes his idea to create the first protocolSatoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocol Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peeused a decentralized, peer-to-peer, and open source trust protocol Satoshi Nakamoto publishes his idea to create the first cryptocurrency which used a decentralized, peer-to-peer, and open source trust protocolr, and open Satoshi Nakamoto publishes his idea to create the first cryptocurre</p>
+            <b>NO EXPERIENCE? YOU HAVE NO WORRIES</b>
+            <p>Are you thinking of venturing into the world of cryptocurrency trading? Cryptologic has you covered, sign up today and get a demo account, a demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading</p>
             <a href="#">Read More</a>
           </div>  
         </div>
