--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -22,9 +22,9 @@
         <div class="page-header__menu">
           <nav class="page-header__main-nav">
             <ul class="main-nav__list">
-              <li class="main-nav__item"><a href="#">LOGIN</a></li>
+              <li class="main-nav__item"><a href="template/login.html">LOGIN</a></li>
               <li class="main-nav__item"><a href="#">CONTACTS</a></li>
-              <li class="main-nav__item"><a href="form.html">LOG UP</a></li>
+              <li class="main-nav__item"><a href="template/form.html">LOG UP</a></li>
             </ul>
           </nav>
         </div>
@@ -37,7 +37,7 @@
         <div class="flex-btn">
           <h1 class="info__title">Cryptologic the science of<br>trading cryptocurrency</h1>
           <p class="info__text">Cryptologic presents investors a unique opportunity<br>to trade or exchange digital assets<br>with ease on a 24/7 basic.</p>
-          <a class="info__link" href="form.html">Create Account</a>
+          <a class="info__link" href="template/form.html">Create Account</a>
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
         <p class="trading__text">Cryptologic provides the possibility to trade Bitcoin or any other digital currency from your pc, tablet or mobile device. This is as a result of our multifaceted design interface. You can follow the market trends and get interesting live updates on the go. On here you can manage your portfolio wherever you are. Trade today with cryptologic and move on the path to success.</p>
       </div>
       <div class="trading__flex-container  trading__flex-container--m">
-        <a class="info__link  info__link--red" href="form.html">Create Account</a>
+        <a class="info__link  info__link--red" href="template/form.html">Create Account</a>
       </div>
     </div>
   </section>
@@ -157,43 +157,34 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="template/login.html">Log In</a></li>
+            <li><a href="template/form.html">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>About</b>
           <ul>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Press</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Legal & Privacy</a></li>
-            <li><a href="#">Security</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
             <li><a href="#">FAQ</a></li>
-            <li><a href="#">Charts</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Fess</a></li>
             <li><a href="#">Support</a></li>
             <li><a href="#">Trading Guide</a></li>
-            <li><a href="#">API</a></li>
-            <li><a href="#">PGP Key</a></li>
-            <li><a href="#">Audit</a></li>
-            <li><a href="#">Bug Bounty</a></li>
           </ul>
         </div>
-        <div class="page-footer__column">
+        <!-- <div class="page-footer__column">
           <b>Language</b><br>
           <select class="page-footer__select">
             <option>English (US)</option>
             <option>Русский</option>
           </select>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
