--- a/assets/templates/crypto/template/form.html
+++ b/assets/templates/crypto/template/form.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CryptoLogic</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/media.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/media.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body class="form__body">
   <section class="modal-login">
     <div class="container">
-      <h1><a href="index.html">CryptoLogic</a></h1>
+      <h1><a href="../index.html">CryptoLogic</a></h1>
       <div class="login">
         <h2>Sign up to <span>CryptoLogic</span></h2>
         <form class="form  modal-login__form" action="index.html" method="post">
@@ -35,7 +35,7 @@
             <input type="checkbox" id="check">
           </div>
           <button class="form__btn  modal-login__enter  btn" type="submit" name="button">Create Account</button>
-          <p class="form__have">Already have an account? <a href="#">Sign In</a></p>
+          <p class="form__have">Already have an account? <a href="login.html">Sign In</a></p>
         </form>
       </div>
     </div>
