--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -23,7 +23,7 @@
           <nav class="page-header__main-nav">
             <ul class="main-nav__list">
               <li class="main-nav__item"><a href="template/login.html">LOGIN</a></li>
-              <li class="main-nav__item"><a href="#">CONTACTS</a></li>
+              <li class="main-nav__item"><a href="template/contact.html">CONTACTS</a></li>
               <li class="main-nav__item"><a href="template/form.html">LOG UP</a></li>
             </ul>
           </nav>
@@ -164,18 +164,18 @@
         <div class="page-footer__column">
           <b>About</b>
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Legal & Privacy</a></li>
-            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="template/about.html">About Us</a></li>
+            <li><a href="template/contact.html">Contact</a></li>
+            <li><a href="template/legal.html">Legal & Privacy</a></li>
+            <li><a href="template/terms.html">Terms & Conditions</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Trading Guide</a></li>
+            <li><a href="template/faq.html">FAQ</a></li>
+            <li><a href="template/support.html">Support</a></li>
+            <li><a href="template/trading.html">Trading Guide</a></li>
           </ul>
         </div>
         <!-- <div class="page-footer__column">
