--- a/assets/templates/crypto/template/about.html
+++ b/assets/templates/crypto/template/about.html
@@ -32,7 +32,9 @@
     </div>
   </header>
   <main class="page-main">
-    
+    <div class="container">
+      
+    </div>
   </main>
   <footer class="page-footer">
     <div class="container">
