--- a/assets/templates/crypto/css/style.css
+++ b/assets/templates/crypto/css/style.css
@@ -568,9 +568,44 @@ form button:hover {
 
 /*Template*/
 .page-main {
-  min-height: 1000px;
+  margin-bottom: -25px;
+  color: #fff;
+  font-size: 25px;
   background: url('../img/tbg.png') no-repeat top;
   background-size: cover;
+}
+
+.page-main--about,
+.page-main--faq h1 {
+  margin-top: 0;
+  padding-top: 60px;
+  text-transform: uppercase;
+}
+
+.page-main--about p {
+  width: 60%;
+  padding-bottom: 120px;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
+.page-main--faq p {
+  width: 60%;
+  padding-left: 30px;
+  color: #606060;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+
+.page-main__title {
+  padding-left: 0 !important;
+  color: #fff !important;
+  font-size: 25px !important;
+  text-transform: uppercase;
+}
+
+.page-main--pb {
+  padding-bottom: 120px;
 }
 
 .page-header--about {
