--- a/assets/templates/crypto/template/terms.html
+++ b/assets/templates/crypto/template/terms.html
@@ -31,8 +31,20 @@
       </div>
     </div>
   </header>
-  <main class="page-main">
-    
+  <main class="page-main  page-main--terms">
+    <div class="container">
+      <h1>Terms & Condition</h1>
+      <p>General</p>
+      <ul>
+        <li>Only one account is allowed per person.</li>
+        <li>The information contained on this website does not constitute accounting, legal, financial, consulting investment or other professional advice. You bear all the risks from any decision to hold, purchase or sell bitcoin on this website and Luno will not be liable for any loss suffered.</li>
+        <li>You agree that you will not use the products and services to facilitate any illegal activities.</li>
+        <li>You agree that you will not use the products and services to engage in any activites listed on the Prohibited Activities list</li>
+        <li>Your account may be terminated if you provide false information or refuse to provide information about your true identity.</li>
+        <li>You agree and consent to receive communications from Luno via email and SMS.</li>
+        <li>Cryptologic may change the Terms of Use at any time for any reason without notice.</li>
+      </ul>
+    </div>
   </main>
   <footer class="page-footer">
     <div class="container">
