--- a/assets/templates/crypto/css/style.css
+++ b/assets/templates/crypto/css/style.css
@@ -576,7 +576,8 @@ form button:hover {
 }
 
 .page-main--about,
-.page-main--faq h1 {
+.page-main--faq,
+.page-main--terms h1 {
   margin-top: 0;
   padding-top: 60px;
   text-transform: uppercase;
@@ -589,6 +590,16 @@ form button:hover {
   text-transform: uppercase;
 }
 
+.page-header--about {
+  border-bottom: 5px solid #fff;
+}
+
+.page-footer--active {
+  color: #bfa75f !important;
+  cursor: default;
+}
+
+/*FAQ*/
 .page-main--faq p {
   width: 60%;
   padding-left: 30px;
@@ -608,17 +619,18 @@ form button:hover {
   padding-bottom: 120px;
 }
 
-.page-header--about {
-  border-bottom: 5px solid #fff;
+/*Terms*/
+.page-main--terms ul {
+  width: 60%;
+  padding-bottom: 120px;
+  color: #606060;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 
-.page-footer--active {
-  color: #bfa75f !important;
-  cursor: default;
+.page-main--terms li {
+  margin-bottom: 15px;
 }
-
-
-
 
 
 
