--- a/assets/templates/crypto/css/style.css
+++ b/assets/templates/crypto/css/style.css
@@ -586,7 +586,7 @@ form button:hover {
 .page-main--about p {
   width: 60%;
   padding-bottom: 120px;
-  font-size: 20px;
+  font-size: 18px;
   text-transform: uppercase;
 }
 
@@ -600,19 +600,19 @@ form button:hover {
 }
 
 /*FAQ*/
+.page-main__title {
+  padding-left: 0 !important;
+  color: #fff !important;
+  font-size: 20px !important;
+  text-transform: uppercase !important;
+}
+
 .page-main--faq p {
   width: 60%;
   padding-left: 30px;
   color: #606060;
   font-size: 18px;
-  text-transform: uppercase;
-}
-
-.page-main__title {
-  padding-left: 0 !important;
-  color: #fff !important;
-  font-size: 25px !important;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 
 .page-main--pb {
@@ -622,16 +622,17 @@ form button:hover {
 /*Terms*/
 .page-main--terms ul {
   width: 60%;
-  padding-bottom: 120px;
   color: #606060;
-  font-size: 20px;
-  text-transform: uppercase;
+  font-size: 18px;
 }
 
 .page-main--terms li {
   margin-bottom: 15px;
 }
 
+.page-main__title-ul {
+  font-size: 17px;
+}
 
 
 
