--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -178,36 +178,27 @@
         <div class="page-footer__column">
           <b>About</b>
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Press</a></li>
+            <li><a href="templates/about.html">About Us</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Legal & Privacy</a></li>
-            <li><a href="#">Security</a></li>
+            <li><a href="templates/privacy.html">Legal & Privacy</a></li>
+            <li><a href="templates/terms.html">Terms & Conditions</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Charts</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Fess</a></li>
+            <li><a href="templates/faq.html">FAQ</a></li>
             <li><a href="#">Support</a></li>
-            <li><a href="#">Trading Guide</a></li>
-            <li><a href="#">API</a></li>
-            <li><a href="#">PGP Key</a></li>
-            <li><a href="#">Audit</a></li>
-            <li><a href="#">Bug Bounty</a></li>
+            <li><a href="templates/trading.html">Trading Guide</a></li>
           </ul>
         </div>
-        <div class="page-footer__column">
+        <!-- <div class="page-footer__column">
           <b>Language</b><br>
           <select class="page-footer__select">
             <option>English (US)</option>
             <option>Русский</option>
           </select>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
