--- a/assets/templates/crypto/template/trading.html
+++ b/assets/templates/crypto/template/trading.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Trading - Cryptologic</title>
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/media.css">
+  <link rel="stylesheet" href="../css/custom.css">
+  <link rel="stylesheet" href="../css/adaptive.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
@@ -35,7 +35,7 @@
     <div class="container">
       <h1>Trading Guide</h1>
       <p class="page-main__legal--title">Bitcoin Trading</p>
-      <p>Cryptologic is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread, and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website, mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
+      <p>Cryptologic is a trusted platform for trading Bitcoins. The exchange provides fast order execution, low spread,<br>and access to high liquidity orderbook for top currency pairs on the market. Cross-platform trading is realised via website,<br>mobile app, and several API solutions. Safety of assets and data are backed by high security standards and advanced legal compliance.</p>
       <p>To start trading on Cryptologic follow the steps</p>
       <p class="page-main__legal--title">Sign up with Cryptologic</p>
       <p>It will take you only a few steps to register and get an account on Cryptologic Bitcoin exchange.</p>
@@ -44,9 +44,9 @@
       <p class="page-main__legal--title">Start trading</p>
       <p>Trade Bitcoin via website interface, mobile app or using automated trading solutions.</p>
       <p class="page-main__legal--title">Commission</p>
-      <p>Cryptologic exchange charges variable commissions of 0% to 0.2%, depending on the trading pair. Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
+      <p>Cryptologic exchange charges variable commissions of 0% to 0.2%, depending on the trading pair.<br>Special conditions are discussable for high-volume traders. Volume-based trade fees are coming soon.</p>
       <p class="page-main__legal--title">Cryptologic API</p>
-      <p>Cryptologic provides several API solutions for automated trading based on needs of individuals and institutions. REST API is a basic tool for quick access to Cryptologic market data and automated trade management. WebSocket API with full trading functionality is mainly used by professional traders. Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
+      <p>Cryptologic provides several API solutions for automated trading based on needs of individuals and institutions.<br>REST API is a basic tool for quick access to Cryptologic market data and automated trade management.<br>WebSocket API with full trading functionality is mainly used by professional traders.<br>Finally, FIX API is the best solution for institutional traders to connect trading systems to a source of Bitcoin liquidity.</p>
       <p class="page-main__legal--title">Key Advantages</p>
       <ul>
         <li>* safe cryptocurrency cold storage and financial viability</li>
