--- a/assets/templates/crypto-b/templates/terms.html
+++ b/assets/templates/crypto-b/templates/terms.html
@@ -4,37 +4,65 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Terms - Cryptologic</title>
-  <link rel="stylesheet" href="../css/custom.css">
-  <link rel="stylesheet" href="../css/adaptive.css">
+  <title>Trading Guide - CryptoLogic</title>
+  <link rel="stylesheet" href="../css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
-  <header class="page-header  page-header--about">
+  <header class="page-header">
+    <div class="page-header__head">
+      <nav class="page-header__nav">
+        <div class="container">
+          <div class="page-header__flex">
+            <div class="page-header__logo">
+              <a href="../index.html">
+                <img class="page-header__logo-b" src="../img/logo.png" alt="CryptoLogic">
+                <img class="page-header__logo-s" src="../img/logo-s.png" alt="CryptoLogic">
+              </a>
+            </div>
+            <div class="page-header__main-nav">
+              <ul class="page-header__nav-list">
+                <li class="page-header__item"><a href="#">Login</a></li>
+                <li class="page-header__item"><a href="#">Contacts</a></li>
+                <li class="page-header__item"><a href="#">Live Chat</a></li>
+              </ul>
+            </div>
+            <div class="page-header__main-nav  page-header__main-nav--s">
+              <ul class="page-header__nav-list">
+                <li class="page-header__item"><a href="#">Login</a></li>
+                <li class="page-header__item"><a href="#">Contacts</a></li>
+                <li class="page-header__item"><a href="#">Live Chat</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
     <div class="container">
-      <div class="page-header__flex-container">
-        <div class="page-header__logo">
-          <a href="../index.html">
-            <img class="page-header__logo-full" src="../img/logo.png" alt="CryptoLogic">
-            <img class="page-header__logo-s" src="../img/logo-s.png" alt="CryptoLogic">
-          </a>
-        </div>
-        <div class="page-header__menu">
-          <nav class="page-header__main-nav">
-            <ul class="main-nav__list">
-              <li class="main-nav__item"><a href="login.html">LOGIN</a></li>
-              <li class="main-nav__item"><a href="contact.html">CONTACTS</a></li>
-              <li class="main-nav__item"><a href="form.html">LOG UP</a></li>
-            </ul>
-          </nav>
-        </div>
+      <div class="page-header__form">
+        <form action="">
+          <input type="text" placeholder="First Name" required>
+          <input type="text" placeholder="Last Name" required>
+          <input type="email" placeholder="E-Mail" required>
+          <input type="tel" placeholder="Phone" required>
+          <select>
+            <option>-Select Country-</option>
+            <option>Test</option>
+          </select>
+          <div class="page-header__checkbox">
+            <input type="checkbox" id="check">
+            <label for="check">I confirm I am over 18 years old<br>and that I have read, understood<br>and accept <a href="#">The Terms and<br>Conditions apply</a>.</label>
+          </div>
+          <input type="submit" value="Register Now">
+          <p>training involves significant risk of loss</p>
+        </form>
       </div>
     </div>
   </header>
-  <main class="page-main  page-main--terms">
+  <main class="page-main">
     <div class="container">
       <h1>Terms & Condition</h1>
-      <p>General</p>
+      <b>General</b>
       <ul>
         <li>Only one account is allowed per person.</li>
         <li>The information contained on this website does not constitute accounting, legal, financial, consulting investment or other professional advice. You bear all the risks from any decision to hold, purchase or sell bitcoin on this website and Luno will not be liable for any loss suffered.</li>
@@ -44,14 +72,14 @@
         <li>You agree and consent to receive communications from Luno via email and SMS.</li>
         <li>Cryptologic may change the Terms of Use at any time for any reason without notice.</li>
       </ul>
-      <p>Cryptologic Wallet</p>
+      <b>Cryptologic Wallet</b>
       <ul>
         <li>The Bitcoin network is responsible for confirming Bitcoin transactions and Cryptologic is not liable for any loss due to, but not limited to, errors in the protocol, delays or any other breakdown relating to the Bitcoin network.</li>
         <li>You acknowledge that cryptologic cannot confirm, cancel or reverse Bitcoin transactions.</li>
         <li>You expressly agree that cryptologic is not liable for any errors, loss or omissions due to sending Bitcoin to or receiving Bitcoin from incorrect wallet addresses, e-mail addresses, entering incorrect transaction amounts, or any other information related to Bitcoin transactions by using the service. Please ensure that you use the correct Bitcoin addresses, e-mail addresses, transaction amounts when transacting.</li>
         <li>Bitcoin is securely stored in a combination of online and offline storage. As a result it may take up to 48 hours or more to facilitate Bitcoin transactions. By using cryptologic you accept the risk that transactions may be delayed and you agree not to hold cryptologic liable for any damages or loss due to delays.</li>
       </ul>
-      <p>Cryptologic Exchange</p>
+      <b>Cryptologic Exchange</b>
       <ul>
         <li>You must be at least 18 years old to use trade on the exchange.</li>
         <li>Any information that you provide must be true, accurate and correct.</li>
@@ -70,8 +98,8 @@
         <li>Cryptologic cannot and does not guarantee the value of Bitcoin and has no obligation to buy back Bitcoin at any time.</li>
         <li>It is your responsibility to determine, account and pay for any taxes that apply to your trading and Bitcoin transactions.</li>
       </ul>
-      <p>Prohibited Activities</p>
-      <p class="page-main__title-ul">You may not use Cryptologic products or services to engage in any of the following activities:</p>
+      <b>Prohibited Activities</b>
+      <b>You may not use Cryptologic products or services to engage in any of the following activities:</b>
       <ul>
         <li>Violation of any laws, statutes, ordinances or regulations.</li>
         <li>Paying into or otherwise supporting pyramid schemes, Ponzi schemes, matrix programs, "get rich quick" schemes, multi-level marketing programs or high-yield investment programs (HYIP).</li>
@@ -91,7 +119,7 @@
           </ul>
         </li>
       </ul>
-      <p class="page-main__title-ul">You may not use Cryptologic products or services to engage in any of the following activities unless pre-approved by Cryptologic:</p>
+      <b>You may not use Cryptologic products or services to engage in any of the following activities unless pre-approved by Cryptologic:</b>
       <ul class="page-main--pb">
         <li>Operating as a money transmitter, payment service provider, e-money or any other financial service business.</li>
         <li>Offering gambling or gaming services.</li>
@@ -100,31 +128,38 @@
   </main>
   <footer class="page-footer">
     <div class="container">
-      <div class="page-footer__flex-container">
+      <div class="page-footer__flex">
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="login.html">Log In</a></li>
-            <li><a href="form.html">Sign Up</a></li>
+            <li><a href="#">Log In</a></li>
+            <li><a href="#">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>About</b>
           <ul>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="legal.html">Legal & Privacy</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="privacy.html">Legal & Privacy</a></li>
             <li><a class="page-footer--active">Terms & Conditions</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
           <b>Resources</b>
           <ul>
-            <li><a href="faq.html">FAQ</a></li>
-            <li><a href="support.html">Support</a></li>
+            <li><a href="faq.com">FAQ</a></li>
+            <li><a href="#">Support</a></li>
             <li><a href="trading.html">Trading Guide</a></li>
           </ul>
         </div>
+        <!-- <div class="page-footer__column">
+          <b>Language</b><br>
+          <select class="page-footer__select">
+            <option>English (US)</option>
+            <option>Русский</option>
+          </select>
+        </div> -->
       </div>
     </div>
   </footer>
